<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/body"
                    android:text="@string/signup_guide_head"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/body"
                    android:text="@string/signup_guide_body"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/head"
                    android:text="@string/insertInfo"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/body"
                        android:text="@string/id"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="3">
                        <EditText
                            android:id="@+id/inputID"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="50dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp"
                            android:backgroundTint="@color/ediya_white"
                            android:fontFamily="@font/minsansblack"
                            android:hint="@string/login_text_id"
                            android:textColorHint="@color/ediya_white"/>
                        <Button
                            android:id="@+id/checkIDBtn"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:text="@string/idCheck"
                            android:background="@color/ediya_white"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/body"
                        android:text="@string/pw"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/inputPW"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:backgroundTint="@color/ediya_white"
                        android:fontFamily="@font/minsansblack"
                        android:hint="@string/login_text_pw"
                        android:textColor="@color/red"
                        android:textColorHint="@color/ediya_white" />

                    <TextView
                        android:id="@+id/passwordAlert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/body"
                        android:textColor="@color/red"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/body"
                        android:text="@string/check_pw"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/checkPW"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:backgroundTint="@color/ediya_white"
                        android:fontFamily="@font/minsansblack"
                        android:hint="@string/re_pw"
                        android:textColorHint="@color/ediya_white"/>

                    <TextView
                        android:id="@+id/passwordCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/body"
                        android:textColor="@color/red"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/body"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:weightSum="10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/putEmail"
                            android:layout_width="0dp"
                            android:layout_weight="6"
                            android:layout_height="50dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:backgroundTint="@color/ediya_white"
                            android:fontFamily="@font/minsansblack"
                            android:hint="@string/put_email"
                            android:textColorHint="@color/ediya_white"/>

                        <Spinner
                            android:id="@+id/spinner"
                            android:layout_width="0dp"
                            android:layout_weight="4"
                            android:layout_height="50dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/body"
                        android:text="@string/findaccount_putname"
                        android:privateImeOptions="defaultInputmode=korean"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/putName"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:backgroundTint="@color/ediya_white"
                        android:fontFamily="@font/minsansblack"
                        android:hint="@string/findaccount_putname"
                        android:textColorHint="@color/ediya_white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/body"
                        android:text="@string/findaccount_putnum"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:weightSum="12"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Spinner
                            android:id="@+id/numberSpinner"
                            android:layout_width="0dp"
                            android:layout_weight="4"
                            android:layout_height="50dp"/>
                        <EditText
                            android:id="@+id/putNumber1"
                            android:layout_weight="4"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:backgroundTint="@color/ediya_white"
                            android:fontFamily="@font/minsansblack"
                            android:hint="@string/findaccount_putnum"
                            android:textColorHint="@color/ediya_white"/>

                        <EditText
                            android:id="@+id/putNumber2"
                            android:layout_weight="4"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:backgroundTint="@color/ediya_white"
                            android:fontFamily="@font/minsansblack"
                            android:hint="@string/findaccount_putnum"
                            android:textColorHint="@color/ediya_white"/>
                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/linearLayout8"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <Button
                        android:id="@+id/signUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/ok"
                        android:fontFamily="@font/body"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        android:background="@drawable/loginbtn"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>












