<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/findidpagebody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/body"
                    android:text="@string/findaccount_guide"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/nameEdit"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:backgroundTint="@color/ediya_white"
                        android:fontFamily="@font/minsansblack"
                        android:hint="@string/findaccount_putname"
                        android:textColorHint="@color/ediya_white"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/idfindnumberspinner"
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="10dp"/>

                        <EditText
                            android:id="@+id/idfind_middel_number"
                            android:layout_width="122.5dp"
                            android:layout_height="50dp"
                            android:hint="@string/findaccount_putnum"
                            android:textAlignment="center"
                            android:layout_marginLeft="10dp"
                            android:textColorHint="@color/ediya_white"
                            android:backgroundTint="@color/ediya_white"
                            android:fontFamily="@font/head"/>

                        <EditText
                            android:id="@+id/idfind_end_number"
                            android:layout_width="122.5dp"
                            android:layout_height="50dp"
                            android:hint="@string/findaccount_putnum"
                            android:textAlignment="center"
                            android:textColorHint="@color/ediya_white"
                            android:backgroundTint="@color/ediya_white"
                            android:layout_marginLeft="10dp"
                            android:fontFamily="@font/head"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/findIDBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/findId"
            android:fontFamily="@font/body"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@drawable/loginbtn"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>












